<?xml version="1.0"?>
<package format="3">
  <name>delay_test</name>
  <version>0.0.0</version>
  <description>Delay measurement between ROS 2 nodes</description>
  <maintainer email="nazanin_amini@outlook.com">nazanin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
